# GRPC_Service

./: .env.example  README.md
protos/: book.proto  crud.proto  healthz.proto  reader.proto  user.proto
src/: alembic.ini  makefile  pyproject.toml
src/alembic/: README.md  env.py  script.py.mako
src/alembic/versions/: add.py  first_mig.py  second_mig.py
src/app/: const.py  main.py  server.py
src/app/internal/api/: __init__.py  main_router.py
src/app/internal/api/enpoints/: __init__.py  healthz.py  user.py
src/app/internal/api/v1/: __init__.py  auth.py  healthz.py  user.py
src/app/internal/auth/: __init__.py  dependencies.py
src/app/internal/core/: __init__.py  db.py  serve.py  settings.py
src/app/internal/models/: __init__.py  book.py  librarian.py  reader.py  urls.py  user.py
src/app/internal/schemas/: __init__.py  book.py  jwt.py  librarian.py  reader.py  urls.py  user.py
src/app/internal/servicer/: __init__.py  auth.py  healtz.py
src/app/internal/stubs/: __init__.py  healthz_pb2.py  healthz_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
