[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Rxyalxrd",email = "3m3rcy3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "grpcio (>=1.71.0,<2.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
    "types-protobuf (>=5.29.1.20250315,<6.0.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)"
]

[tool.mypy]
plugins = ['pydantic.mypy']
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
